# hugo_jupyter

./: .buildinfo  .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.rst  fabfile.py  genindex.html  hugo_jupyter.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  utils.py
.github/: ISSUE_TEMPLATE.md
_modules/: index.html
_modules/hugo_jupyter/: cli.html
_sources/: hugo_jupyter.rst.txt  index.rst.txt  modules.rst.txt
docs/: .gitignore  Makefile  conf.py  make.bat
hugo_jupyter/: __fabfile.py  __init__.py  cli.py
tests/: __init__.py  test_hugo_jupyter.py
