[metadata]
name = hugo_jupyter
version = 1.0.3
description = Use Jupyter notebooks to publish with Hugo.
long_description = file: README.rst
author = Stephan Fitzpatrick
author_email = knowsuchagency@gmail.com
url = https://github.com/knowsuchagency/hugo_jupyter
license = MIT license
keywords = hugo_jupyter
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
setup_requires = pytest-runner==5.3.1

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest
